--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.verkhovskygroup.HexBinApp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
@@ -10,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeDark"
         tools:ignore="AllowBackup">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
         <activity
             android:name="com.verkhovskygroup.HexBinApp.MainActivity"
             android:configChanges="orientation"
